[tool.poetry]
name = "SamplesAbyss"
version = "0.1.8"
description = "SamplesAbyss, a never ending abyss of samples"
authors = ["Tomislav Nazifovic <tomislav.nazifovic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.2.0"
bootstrap4 = "^0.1.0"
crispy-bootstrap4 = "^2023.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
