[tool.poetry]
name = "SamplesAbyss"
version = "0.1.8"
description = "SamplesAbyss, a never ending abyss of samples"
authors = ["Tomislav Nazifovic <tomislav.nazifovic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
bootstrap4 = "^0.1.0"
python3-discogs-client = "^2.7"
spotipy = "^2.23.0"
ytmusicapi = "^1.5.4"
cinemagoer = "^2023.5.1"
django = "*"

[tool.poetry.group.dev.dependencies]
ipython = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
